--- a/FeedingEPN/app/src/main/res/layout/activity_welcome.xml
+++ b/FeedingEPN/app/src/main/res/layout/activity_welcome.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aal.epn.feedingepn.Welcome">
+    tools:context="com.aal.epn.feedingepn.Welcome"
+    android:background="#06f394">
 
     <TextView
         android:layout_width="wrap_content"
