--- a/FeedingEPN/app/src/main/res/layout/activity_calculo__calorias.xml
+++ b/FeedingEPN/app/src/main/res/layout/activity_calculo__calorias.xml
@@ -15,12 +15,12 @@
         android:text="Peso:"
         android:id="@+id/textView3"
         android:layout_marginTop="67dp"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_x="34dp"
-        android:layout_y="111dp" />
+        android:layout_x="20dp"
+        android:layout_y="160dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -32,20 +32,20 @@
         android:layout_alignTop="@+id/textView3"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_x="134dp"
-        android:layout_y="107dp" />
+        android:layout_x="130dp"
+        android:layout_y="160dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Altura:"
         android:id="@+id/textView4"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/textView3"
         android:layout_alignStart="@+id/textView3"
-        android:layout_x="13dp"
-        android:layout_y="189dp" />
+        android:layout_x="20dp"
+        android:layout_y="200dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -57,21 +57,21 @@
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/editText3"
         android:layout_alignStart="@+id/editText3"
-        android:layout_x="136dp"
-        android:layout_y="189dp" />
+        android:layout_x="135dp"
+        android:layout_y="200dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edad:"
         android:id="@+id/textView5"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_marginTop="38dp"
         android:layout_below="@+id/editText4"
         android:layout_alignRight="@+id/textView3"
         android:layout_alignEnd="@+id/textView3"
-        android:layout_x="44dp"
-        android:layout_y="21dp" />
+        android:layout_x="20dp"
+        android:layout_y="120dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -83,20 +83,20 @@
         android:layout_alignTop="@+id/textView5"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_x="136dp"
-        android:layout_y="25dp" />
+        android:layout_x="137dp"
+        android:layout_y="120dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Género:"
         android:id="@+id/textView6"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_below="@+id/editText5"
         android:layout_alignLeft="@+id/textView5"
         android:layout_alignStart="@+id/textView5"
-        android:layout_x="11dp"
-        android:layout_y="248dp" />
+        android:layout_x="20dp"
+        android:layout_y="250dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
         android:layout_alignLeft="@+id/checkBox2"
         android:layout_alignStart="@+id/checkBox2"
         android:layout_x="134dp"
-        android:layout_y="328dp" />
+        android:layout_y="280dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -122,15 +122,28 @@
         android:layout_marginLeft="86dp"
         android:layout_marginStart="86dp"
         android:layout_x="135dp"
-        android:layout_y="275dp" />
+        android:layout_y="255dp" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="183dp"
+        android:layout_height="56dp"
         android:id="@+id/imageButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_launcher"
-        android:layout_x="155dp"
-        android:layout_y="400dp" />
+        android:src="@mipmap/Boton_Registrarme"
+        android:layout_x="101dp"
+        android:layout_y="397dp" />
+
+    <TextView
+        android:layout_width="328dp"
+        android:layout_height="wrap_content"
+        android:text="Registro Datos Personales"
+        android:id="@+id/textView7"
+        android:textSize="25dp"
+        android:layout_marginTop="38dp"
+        android:layout_below="@+id/editText4"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3"
+        android:layout_x="39dp"
+        android:layout_y="33dp" />
 </AbsoluteLayout>
