--- a/FeedingEPN/app/src/main/res/layout/activity_welcome.xml
+++ b/FeedingEPN/app/src/main/res/layout/activity_welcome.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.aal.epn.feedingepn.Welcome"
-    android:background="#06f394">
+    android:background="@color/accent_material_dark">
 
     <TextView
         android:layout_width="wrap_content"
