--- a/FeedingEPN/app/src/main/res/layout/activity_welcome.xml
+++ b/FeedingEPN/app/src/main/res/layout/activity_welcome.xml
@@ -17,7 +17,10 @@
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp" />
+        android:layout_marginTop="180dp"
+        android:textSize="35dp"
+        android:textColor="#fc9700"
+        android:textStyle="bold|italic" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,6 +28,8 @@
         android:text="EPN"
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dp" />
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:textSize="20dp"
+        android:textColor="#fefefe" />
 </RelativeLayout>
