--- a/FeedingEPN/app/src/main/res/layout/activity_calculo__calorias.xml
+++ b/FeedingEPN/app/src/main/res/layout/activity_calculo__calorias.xml
@@ -1,151 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aal.epn.feedingepn.Calculo_Calorias"
-    android:background="@color/highlighted_text_material_dark">
+    android:orientation="vertical"
+    android:elevation="10dp"
+    android:background="#F5F5F5">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Peso:"
-        android:id="@+id/textView3"
-        android:layout_marginTop="67dp"
-        android:textSize="25dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_x="20dp"
-        android:layout_y="160dp" />
+        android:layout_gravity="right"></LinearLayout>
 
-    <EditText
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/editText3"
-        android:hint="Ingresa tu peso"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_x="130dp"
-        android:layout_y="160dp" />
+        android:background="#0288D1"
+        android:padding="20dp"
+        android:elevation="20dp" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Altura:"
-        android:id="@+id/textView4"
-        android:textSize="25dp"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_x="20dp"
-        android:layout_y="200dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/titulo_pantalla"
+            android:id="@+id/textView8"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="30dp" />
+    </RelativeLayout>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/editText4"
-        android:hint="Ingresa tu altura"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/editText3"
-        android:layout_alignStart="@+id/editText3"
-        android:layout_x="135dp"
-        android:layout_y="200dp" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@color/accent_material_dark"
+        android:elevation="15dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edad:"
-        android:id="@+id/textView5"
-        android:textSize="25dp"
-        android:layout_marginTop="38dp"
-        android:layout_below="@+id/editText4"
-        android:layout_alignRight="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3"
-        android:layout_x="20dp"
-        android:layout_y="120dp" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView"
+            android:src="@mipmap/foto"
+            android:background="#03A9F4" />
+    </LinearLayout>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/editText5"
-        android:hint="Ingresa tu edad"
-        android:layout_alignTop="@+id/textView5"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_x="137dp"
-        android:layout_y="120dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Género:"
-        android:id="@+id/textView6"
-        android:textSize="25dp"
-        android:layout_below="@+id/editText5"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_x="20dp"
-        android:layout_y="250dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Peso:"
+            android:id="@+id/textView3"
+            android:textSize="25dp"
+            android:layout_marginLeft="100dp"
+            android:textStyle="bold" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Femenino"
-        android:id="@+id/checkBox"
-        android:checked="false"
-        android:layout_alignTop="@+id/textView6"
-        android:layout_alignLeft="@+id/checkBox2"
-        android:layout_alignStart="@+id/checkBox2"
-        android:layout_x="134dp"
-        android:layout_y="280dp" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            android:id="@+id/editText1"
+            android:hint="Ingresa tu peso"
+            android:layout_alignTop="@+id/textView3"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_x="130dp"
+            android:layout_y="160dp"
+            android:layout_marginLeft="100dp" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Masculino"
-        android:id="@+id/checkBox2"
-        android:checked="false"
-        android:layout_below="@+id/checkBox"
-        android:layout_toRightOf="@+id/textView6"
-        android:layout_toEndOf="@+id/textView6"
-        android:layout_marginLeft="86dp"
-        android:layout_marginStart="86dp"
-        android:layout_x="135dp"
-        android:layout_y="255dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Altura:"
+            android:id="@+id/textView2"
+            android:textSize="25dp"
+            android:layout_marginLeft="100dp"
+            android:textStyle="bold" />
 
-    <ImageButton
-        android:layout_width="183dp"
-        android:layout_height="56dp"
-        android:id="@+id/imageButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:src="@mipmap/Boton_Registrarme"
-        android:layout_x="101dp"
-        android:layout_y="397dp" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            android:id="@+id/editText4"
+            android:hint="Ingresa tu altura"
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@+id/editText3"
+            android:layout_alignStart="@+id/editText3"
+            android:layout_x="135dp"
+            android:layout_y="200dp"
+            android:layout_marginLeft="100dp" />
 
-    <TextView
-        android:layout_width="328dp"
-        android:layout_height="wrap_content"
-        android:text="Registro Datos Personales"
-        android:id="@+id/textView7"
-        android:textSize="25dp"
-        android:layout_marginTop="38dp"
-        android:layout_below="@+id/editText4"
-        android:layout_alignRight="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3"
-        android:layout_x="39dp"
-        android:layout_y="33dp"
-        android:textStyle="bold" />
-</AbsoluteLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edad:"
+            android:id="@+id/textView4"
+            android:textSize="25dp"
+            android:layout_marginLeft="100dp"
+            android:textStyle="bold" /> />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            android:id="@+id/editText5"
+            android:hint="Ingresa tu edad"
+            android:layout_alignTop="@+id/textView5"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_x="137dp"
+            android:layout_y="120dp"
+            android:layout_marginLeft="100dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Género:"
+            android:id="@+id/textView6"
+            android:textSize="25dp"
+            android:layout_marginLeft="100dp"
+            android:textStyle="bold" /> />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Femenino"
+            android:id="@+id/checkBox"
+            android:checked="false"
+            android:layout_alignTop="@+id/textView6"
+            android:layout_alignLeft="@+id/checkBox2"
+            android:layout_alignStart="@+id/checkBox2"
+            android:layout_x="134dp"
+            android:layout_y="280dp"
+            android:layout_marginLeft="100dp" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Masculino"
+            android:id="@+id/checkBox2"
+            android:checked="false"
+            android:layout_below="@+id/checkBox"
+            android:layout_toRightOf="@+id/textView6"
+            android:layout_toEndOf="@+id/textView6"
+            android:layout_x="135dp"
+            android:layout_y="255dp"
+            android:layout_marginLeft="100dp" />
+
+        <ImageButton
+            android:layout_width="183dp"
+            android:layout_height="match_parent"
+            android:id="@+id/imageButton"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_x="101dp"
+            android:layout_y="397dp"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="328dp"
+            android:layout_height="wrap_content"
+            android:text="Registro Datos Personales"
+            android:id="@+id/textView5"
+            android:textSize="25dp"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
+
+</LinearLayout>
