--- a/Servlets-backend/app/src/main/res/layout/activity_almuerzos.xml
+++ b/Servlets-backend/app/src/main/res/layout/activity_almuerzos.xml
@@ -3,12 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:elevation="10dp"
+
+    android:weightSum="1">
     tools:context=".almuerzosActivity"
-    android:background="@color/material_deep_teal_500">
+
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"></LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#0288D1"
+        android:padding="20dp"
+        android:elevation="20dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/titulo_pantalla"
+            android:id="@+id/textView8"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="30dp" />
+    </RelativeLayout>
+
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -23,9 +48,11 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:textColor="@color/abc_primary_text_material_dark"
+            android:textColor="@color/abc_primary_text_disable_only_material_light"
             android:textSize="20dp"
-            android:textStyle="bold|italic" />
+            android:textStyle="bold|italic"
+            android:background="#ffffff"
+            android:autoText="true" />
 
         <ListView
             android:layout_width="fill_parent"
