--- a/Servlets-backend/app/src/main/res/layout/activity_beneficios.xml
+++ b/Servlets-backend/app/src/main/res/layout/activity_beneficios.xml
@@ -3,13 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".beneficioActivity"
     android:orientation="vertical"
-    android:background="#04B4AE">
+    android:elevation="10dp"
+
+    tools:context=".beneficioActivity"
+    android:weightSum="1">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#0288D1"
+        android:padding="20dp"
+        android:elevation="20dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/titulo_pantalla"
+            android:id="@+id/textView8"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="30dp" />
+    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,7 +32,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Beneficios"
         android:id="@+id/textView"
-        android:textColor="@color/abc_primary_text_disable_only_material_dark" />
+        android:textColor="@color/abc_primary_text_disable_only_material_light"
+        android:layout_gravity="center_horizontal" />
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
