--- a/Servlets-backend/app/src/main/res/layout/activity_inicio.xml
+++ b/Servlets-backend/app/src/main/res/layout/activity_inicio.xml
@@ -1,38 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aal.epn.servlets_backend.InicioActivity">
+    android:orientation="vertical"
+    android:elevation="10dp"
+    android:background="#F5F5F5"
+    android:weightSum="1">
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"></LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:elevation="20dp"
+        android:background="#0288D1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/titulo_pantalla"
+            android:id="@+id/textView8"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="30dp" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@color/accent_material_dark"
+        android:elevation="15dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView"
+            android:src="@mipmap/normal"
+            android:background="#03A9F4"
+            android:elevation="14dp" />
+    </LinearLayout>
+
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Normal"
-        android:id="@+id/btnNormal"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="menu normal"
+    android:id="@+id/btnNormal"
+    android:background="#E53935"
+        android:elevation="12dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Especial"
-        android:id="@+id/btnEspecial"
-        android:layout_below="@+id/btnNormal"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="menu especial"
+    android:id="@+id/btnEspecial"
+    android:background="#FF9800"
+        android:elevation="10dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Semana"
-        android:id="@+id/btnSemana"
-        android:layout_below="@+id/btnEspecial"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp" />
-</RelativeLayout>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="menu semanal"
+    android:id="@+id/btnSemana"
+        android:background="#00C853"
+        android:elevation="8dp" />
+
+    <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Calculo imc"
+    android:id="@+id/btnCalculoIMC"
+    android:layout_row="0"
+    android:layout_column="0"
+    android:background="#00897B"
+        android:elevation="6dp" />
+
+     <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Calculo indice Cintura Cadera"
+    android:layout_row="0"
+    android:layout_column="1"
+    android:id="@+id/btnIndiceCintura"
+    android:background="#2196F3"
+         android:elevation="4dp" />
+
+    <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="SALIR"
+    android:id="@+id/btnSalir"
+    android:layout_gravity="center_horizontal"
+        android:background="#b88888"
+        android:elevation="2dp" />
+
+</LinearLayout>
